workspace = { members = [ "net/wasabi","saba_core", "ui/wasabi"] }
[package]
name = "saba"
version = "0.1.0"
edition = "2021"
default-rn = "saba"

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:noli"]

[[bin]]
name = "saba"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
saba_core = {path = "./saba_core"}
net_wasabi = {path="./net/wasabi", optional=true}
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
